diesel_compile_tests/tests/fail/derive/unknown_attribute.stderr
error: unknown attribute
 --> $DIR/unknown_attribute.rs:5:10
  |
5 | #[diesel(what = true)]
  |          ^^^^

error: unknown attribute
  --> $DIR/unknown_attribute.rs:12:14
   |
12 |     #[diesel(what = true)]
   |              ^^^^
